src/test/deca/context/invalid/provided/VoidVar.deca
// DESCRIPTION: Déclaration de variable de type void
// RESULTAT: Illegal start of expression: void type inaccessible ! (3.17)
{
    void i;
}
